[tool.poetry]
name = "flaskproject003"
version = "0.1.0"
description = ""
authors = ["vikornienko <vikornienko76@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
